[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PomoBlast/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://PomoBlast/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://PomoBlast/PomoBlast.gd" type="Script" id=4]
[ext_resource path="res://PomoBlast/PowerUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://PomoBlast/assets/StarField/StarFieldBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://PomoBlast/ScoreLabel.gd" type="Script" id=7]
[ext_resource path="res://PomoBlast/Bullet.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -29, -4.09016, 0, 0, 0, 0, -23, 1762.86, 0, 0, 0, 0, 3317, 1749.57, 0, 0, 0, 0, 3317, -10.2254, 0, 0, 0, 0, -22, -10.2254 )
}

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
Mob = ExtResource( 2 )

[node name="Bullet" parent="." instance=ExtResource( 8 )]
position = Vector2( 304, 184 )
scale = Vector2( 1, 0.977957 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 304, 184 )
scale = Vector2( 1, 0.977957 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -29, -4.09016 )
rotation = 1.5674

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 1917, 1077 )
scale = Vector2( 1, 0.977957 )

[node name="Sprite" type="Sprite" parent="StartPosition"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Pause" type="Button" parent="HUD"]
margin_left = 21.0
margin_top = 18.0
margin_right = 33.0
margin_bottom = 38.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="HUD"]
margin_left = 249.0
margin_top = 120.0
margin_right = 289.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="HUD/Popup"]
margin_left = 45.0
margin_top = -34.0
margin_right = 96.0
margin_bottom = -20.0
text = "PAUSED"

[node name="Resume" type="Button" parent="HUD/Popup"]
margin_left = 37.0
margin_top = -9.0
margin_right = 101.0
margin_bottom = 11.0
text = "Resume"

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 106.0
margin_top = 23.0
margin_right = 146.0
margin_bottom = 37.0
text = "Score:"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUp" parent="." instance=ExtResource( 5 )]
position = Vector2( 676, 284 )

[node name="StarFieldBackground" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="pressed" from="HUD/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="HUD/Popup/Resume" to="." method="_on_Resume_pressed"]
